# streamco

./: .gitattributes  .gitignore  CMakeLists.txt  streamnet_protocol.h
.claude/: settings.local.json
Video_Codec_SDK_12.2.72/Lib/Win32/: nvcuvid.lib  nvencodeapi.lib
Video_Codec_SDK_12.2.72/Samples/: CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/AppDecode/AppDec/: AppDec.cpp  CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/AppDecode/AppDecD3D/: AppDecD3D.cpp  CMakeLists.txt  FramePresenterD3D.h  FramePresenterD3D11.h  FramePresenterD3D9.h
Video_Codec_SDK_12.2.72/Samples/AppDecode/AppDecGL/: AppDecGL.cpp  CMakeLists.txt  FramePresenterGLUT.h  FramePresenterGLX.cpp  FramePresenterGLX.h
Video_Codec_SDK_12.2.72/Samples/AppDecode/AppDecImageProvider/: AppDecImageProvider.cpp  CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/AppDecode/AppDecLowLatency/: AppDecLowLatency.cpp  CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/AppDecode/AppDecMem/: AppDecMem.cpp  CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/AppDecode/AppDecMultiFiles/: AppDecMultiFiles.cpp  CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/AppDecode/AppDecMultiInput/: AppDecMultiInput.cpp  CMakeLists.txt  Image.cu
Video_Codec_SDK_12.2.72/Samples/AppDecode/AppDecPerf/: AppDecPerf.cpp  CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/AppEncode/AppEncCuda/: AppEncCuda.cpp  CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/AppEncode/AppEncD3D11/: AppEncD3D11.cpp  CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/AppEncode/AppEncD3D12/: AppEncD3D12.cpp  CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/AppEncode/AppEncD3D9/: AppEncD3D9.cpp  CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/AppEncode/AppEncDec/: AppEncDec.cpp  CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/AppEncode/AppEncGL/: AppEncGL.cpp  CMakeLists.txt  GraphicsUtils.cpp  GraphicsUtils.h
Video_Codec_SDK_12.2.72/Samples/AppEncode/AppEncLowLatency/: AppEncLowLatency.cpp  CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/AppEncode/AppEncME/: AppEncME.cpp  CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/AppEncode/AppEncMultiInstance/: AppEncMultiInstance.cpp  AppEncMultiInstance.h  CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/AppEncode/AppEncPerf/: AppEncPerf.cpp  CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/AppEncode/AppEncQual/: AppEncQual.cpp  CMakeLists.txt  PSNR.h
Video_Codec_SDK_12.2.72/Samples/AppEncode/AppMotionEstimationVkCuda/: AppMotionEstimationVkCuda.cpp  CMakeLists.txt  NvEnc.cpp  NvEnc.h  utility.cpp  utility.h
Video_Codec_SDK_12.2.72/Samples/AppEncode/Common/: AppEncUtils.h  AppEncUtilsD3D11.h
Video_Codec_SDK_12.2.72/Samples/AppTranscode/AppTrans/: AppTrans.cpp  CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/AppTranscode/AppTransOneToN/: AppTransOneToN.cpp  CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/AppTranscode/AppTransPerf/: AppTransPerf.cpp  CMakeLists.txt
Video_Codec_SDK_12.2.72/Samples/NvCodec/NvDecoder/: NvDecoder.cpp  NvDecoder.h
Video_Codec_SDK_12.2.72/Samples/NvCodec/NvEncoder/: NvEncoder.cpp  NvEncoder.h  NvEncoderCuda.cpp  NvEncoderCuda.h  NvEncoderD3D11.cpp  NvEncoderD3D11.h  NvEncoderD3D12.cpp  NvEncoderD3D12.h  NvEncoderD3D9.cpp  NvEncoderD3D9.h  NvEncoderGL.cpp  NvEncoderGL.h  NvEncoderOutputInVidMemCuda.cpp  NvEncoderOutputInVidMemCuda.h  NvEncoderOutputInVidMemD3D11.cpp  NvEncoderOutputInVidMemD3D11.h
Video_Codec_SDK_12.2.72/Samples/Utils/: Logger.h  Resize.cu  crc.cu
chromecapture/: CMakeLists.txt  main.cpp
cuda/: version.json
cuda/compute-sanitizer/: sanitizer-public.lib
cuda/compute-sanitizer/docs/: genindex.html  index.html  objects.inv  project.json  search.html  searchindex.js
cuda/compute-sanitizer/docs/ComputeSanitizer/: index.html
cuda/compute-sanitizer/docs/CopyrightAndLicenses/: index.html
cuda/compute-sanitizer/docs/ReleaseNotes/: index.html
cuda/compute-sanitizer/docs/SanitizerApi/: table-of-contents.html
cuda/compute-sanitizer/docs/SanitizerApiGuide/: index.html
cuda/compute-sanitizer/docs/SanitizerNvtxGuide/: index.html
cuda/compute-sanitizer/docs/_static/: documentation_options.js
cuda/compute-sanitizer/docs/api/: group___s_a_n_i_t_i_z_e_r___b_a_r_r_i_e_r___a_p_i.html  group___s_a_n_i_t_i_z_e_r___c_a_l_l_b_a_c_k___a_p_i.html  group___s_a_n_i_t_i_z_e_r___m_e_m_o_r_y___a_p_i.html  group___s_a_n_i_t_i_z_e_r___p_a_t_c_h_i_n_g___a_p_i.html  group___s_a_n_i_t_i_z_e_r___r_e_s_u_l_t___a_p_i.html  modules.html  (+22 more)
cuda/compute-sanitizer/include/: generated_cuda_meta.h  generated_cuda_runtime_api_meta.h  sanitizer.h  sanitizer_barrier.h  sanitizer_callbacks.h  sanitizer_driver_cbid.h  sanitizer_memory.h  sanitizer_patching.h  sanitizer_result.h  sanitizer_runtime_cbid.h  sanitizer_stream.h
cuda/include/: cublas_api.h  npp.h  nvFatbin.h  nvjpeg.h
cuda/include/CL/: cl_ext.h
cuda/lib/x64/: cublas.lib  cublasLt.lib  cuda.lib  cudadevrt.lib  cudart.lib  cudart_static.lib  cufilt.lib  nvJitLink.lib  nvJitLink_static.lib  nvblas.lib  nvfatbin.lib  nvfatbin_static.lib  nvml.lib  nvptxcompiler_static.lib  nvrtc-builtins_static.lib  nvrtc.lib  nvrtc_static.lib
cuda/libnvvp/: artifacts.xml
cuda/libnvvp/configuration/: config.ini
cuda/nvvm/include/: nvvm.h
cuda/nvvm/libdevice/: libdevice.10.bc
screencapture/: CMakeLists.txt  main.cpp
screendisplay/: CMakeLists.txt  main.cpp
streamreceiver/: CMakeLists.txt  colorconv.cu  main.cpp
streamruntime/: CMakeLists.txt  DESIGN.md  streamruntime.cpp  streamruntime.def
streamsender/: CMakeLists.txt  main.cpp
(+256 files in other folders)
